# tgcrypto

./: Cargo.toml  README.md  install.sh  run-tests.php
.cargo/: config.toml
.cargooo/: config.toml
.github/workflows/: rust.yml
src/: aesige.rs  factorizator.rs  lib.rs
tests/: test-001.php  test-002.php
