[package]
name = "tgcrypto"
version = "0.0.1"
edition = "2024"
description = "A PHP extension for cryptographic functions using Rust"
license = "GNU General Public License v3.0"
repository = "https://github.com/Tak-Pesar/tgcrypto"
readme = "README.md"
keywords = ["telegram", "bot", "rust", "tgcrypto", "php"]

[lib]
name = "tgcrypto"
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "0.13"
grammers-crypto = "0.7"
# aes = "0.8.4"
# ctr = "0.9.2"

[profile.release]
lto = true # Enable Link-Time Optimization for better performance
codegen-units = 1 # Optimize for binary size
opt-level = "z" # Optimize for size


